refactured code